# insight_engine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: handoff-followups.yml  weekly-jobs.yml
app/: main.py
app/api/: deps.py
app/api/routes/: discovery.py  (+4 more)
app/context/: velveteen_linkedin_github.md
app/core/: brand_voice.py  config.py
app/db/: queries.py  session.py
app/domain/: message.py
app/integrations/: arxiv_client.py  exa_client.py  github_client.py  hn_client.py  openai_compat.py  telegram_client.py
app/prompts/: drafts.py  editorial.py  handoff_match.py  linkedin.py
app/schemas/: commands.py  common.py  discovery.py  drafts.py  editorial.py  github.py  goals.py  linkedin.py  mvp_handoff.py  telegram.py
app/services/: active_goals.py  classifier.py  context_hub.py  discovery_service.py  draft_generator.py  editorial_planner.py  generation.py  github_insight_service.py  handoff_followups.py  linkedin_writer.py  message_intake.py  mvp_handoff.py  query_normalizer.py  relevance_ranker.py  scheduler.py  telegram_orchestrator.py  transcription.py
app/utils/: telegram_formatting.py
scripts/: set_webhook.py  setup_db.py
tests/: conftest.py  test_classifier.py  test_commands.py  test_context_hub.py  test_discovery.py  test_drafts.py  test_editorial.py  test_github_insight.py  test_goals_and_followups.py  test_health.py  test_intake.py  test_internal.py  test_openai_compat.py  test_query_normalizer.py  test_scheduler.py  test_telegram_client.py  test_transcription.py
